Fix CSS "nowrap" spelling.

--- a/src/leaderboard/leaderboard.scss
+++ b/src/leaderboard/leaderboard.scss
@@ -5,7 +5,7 @@ leaderboard {
     .row {
         display: flex;
         flex-direction: row;
-        flex-wrap: no-wrap;
+        flex-wrap: nowrap;
         width: 100%;
     }
 
